--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
+  "resolutions": {
+    "https-proxy-agent": "^3.0.0"
+  },
   "engines": {
     "node": ">=8.0"
   },
@@ -28,8 +31,11 @@
     "@nuxtjs/axios": "^5.5.3",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/redirect-module": "^0.3.1",
+    "https-proxy-agent": "^2.2.3",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.8.0",
+    "nuxt-onsenui-module": "^1.0.1",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.3.3",
     "vue-light-gallery": "^1.0.1",
     "vue-select": "^3.2.0",
@@ -50,6 +56,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "node-sass": "^4.12.0",
+    "npm-force-resolutions": "0.0.3",
     "sass-loader": "^8.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2"
