--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nuxtjs/google-gtag": "^1.0.4",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.8.0",
+    "nuxt-onsenui-module": "^1.0.1",
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.3.3",
     "vue-light-gallery": "^1.0.1",
