Homepage list svg added, search form required items added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "famProperties",
+  "name": "famproperties",
   "description": "Fam Properties Mobile Application",
   "version": "1.0.0",
   "author": "Mahesh Maheswar<mahi2net@gmail.com>",
